playbooks/templates/longhorn-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-ingress
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/component: ingress
    access: internal
    environment: prod
  annotations:
    maintained-by: devops@socialdevs.site
    created-by: ansible
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`longhorn.socialdevs.site`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: longhorn-dashboard-auth-middleware
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: internal-tls-secret
